--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
   "display": "standalone",
   "background_color": "#fff",
   "theme_color": "#C51162",
-  "description": "Blog yang ditampilkan hanya text saja, tetapi di postingan bisa ditambah image dan video Youtube.",
+  "description": "Web Parhalado memuat lirik lagu buku ende hkbp online, kidung jemaat, dan lagu rohani kristen lainnya, juga renungan-renungan kristiani.",
   "icons": [{
     "src": "https://1.bp.blogspot.com/-4C2_CPqDOFs/YKDmFmEz1WI/AAAAAAAAA6Q/JC9omD_EqhQkkWBJLAp42JvscT5hSE4rgCLcBGAsYHQ/s0/Parhalado%2B48.png",
     "sizes": "48x48",
